fixed wrapping problem

--- a/final_acme/acme/css/screen.css
+++ b/final_acme/acme/css/screen.css
@@ -51,6 +51,11 @@ button {
     font-size: 20px;
 }
 
+#description{
+    margin-top: 0;
+    margin-left: 5px;
+}
+
 #content{
     display: flex;
     flex-direction: column;
@@ -218,8 +223,13 @@ footer {
         flex-direction: row;
     }
 
+    #contentContent{
+        overflow: hidden;
+    }
+
     #picture{
-        width: 40%; 
+        width: 50%;
+        float: left;
     } 
 }
 
